# imdfetch

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_sources/: index.rst.txt
_sources/notebooks/: demo.ipynb.txt
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/notebooks/: demo.ipynb
examples/: basic_usage.py  batch_processing.py  weather_data.csv
imdfetch/: __init__.py  cli.py  client.py  constants.py  dates.py  exceptions.py  http.py  parser.py  textfmt.py  utils.py  weather.py
notebooks/: demo.html  demo.ipynb
tests/: test_cli.py  test_http.py  test_json_builders.py  test_models.py  test_parser.py  test_utils.py
